# victron-jc1060p470c-esp32p4

./: .clangd  .gitignore  AUTOCARAVANA-SETUP.md  CLAUDE.md  CMakeLists.txt  DESARROLLO.md  IDF_VERSION.txt  INSTALACION.md  Kconfig  README.md  README_PORT.md  SESION-2026-06-16-resumen.md  SNIFFER-PLAN.md  VICTRON-CONTEXT.md  VictronSolarDisplay_ESP32P4_PortGuide.docx  config.env  dev-end.sh  dev-start.sh  empiezo  partitions.csv  release.sh  sdkconfig  sdkconfig.defaults  spiffs-flash_args  spiffs-flash_args.in  termino
capturas/: _index.html
components/alerts/: CMakeLists.txt  alerts.c
components/audio_es8311/: CMakeLists.txt  audio_es8311.c
components/esp_lcd_jd9165/: CMakeLists.txt  esp_lcd_jd9165.c
components/ov02c10/: CMakeLists.txt  ov02c10.c
components/ov02c10/include/: ov02c10.h
components/ov02c10/private_include/: ov02c10_settings.h
components/victron_ble/: CMakeLists.txt  victron_ble.c  victron_products.c
components/victron_ble/include/: victron_ble.h  victron_products.h  victron_records.h
docs/: JC1060P470C_I_W_Y-V1.0_esquematico.html  camara_sc2336_pinmap.md  gen_screenshots_pdf.py  ne185_protocolo_completo.md  pinout_guition_jc1060p470c_i.html  soporte_pared_pantalla.FCStd
files/: index.html  style.css
main/: CMakeLists.txt  api_rest.h  config_backup.c  config_backup.h  config_server.c  config_server.h  dashboard_state.c  dashboard_state.h  display.h  energy_today.c  energy_today.h  esp_bsp.c  esp_bsp.h  health_score.c  health_score.h  idf_component.yml  log_browser.c  log_browser.h  main.c  nvs_trace.c  nvs_trace.h  pzem004t.c  pzem004t.h  screenshot.c  screenshot.h  sim_overview.c  sim_overview.h  splash.c  splash.h  trip_computer.c  trip_computer.h  ui.c  ui.h  victron_alarms.c  victron_alarms.h  watchdog.c  watchdog.h  wifi_nan_compat.c
main/camper/: camper.c  camper.h
main/fonts/: fonts_es.h  lv_font_inter_14_es.c  lv_font_inter_20_es.c  lv_font_inter_24_es.c  lv_font_inter_28_es.c  lv_font_inter_46.c  lv_font_inter_semibold_20.c  lv_font_inter_semibold_24.c  lv_font_montserrat_14_es.c  lv_font_montserrat_20_es.c  lv_font_montserrat_24_es.c  lv_font_montserrat_28_es.c
main/icons/: gen_fan_icon.py  gen_icons.py  gen_splash.py  icon_battery.c  icon_dcdc.c  icon_fan.c  icon_home.c  icon_solar.c  icons.h  splash_logo.c
main/log_capture/: log_capture.c  log_capture.h
main/ne185/: ne185.c  ne185.h
main/net/: mini_proto.h  udp_tx.c  udp_tx.h
main/ui/: ausente_mode.c  ausente_mode.h  device_view.h  frigo_panel.c  frigo_panel.h  gallery.c  gallery.h  lv_font_thermometer.c  lv_font_thermometer.h  settings_logs_panel.c  settings_logs_panel.h  settings_panel.c  settings_panel.h  ui_card.c  ui_card.h  ui_format.c  ui_format.h  ui_state.h  view_battery_monitor.c  view_battery_monitor.h  view_default_battery.c  view_default_battery.h  view_overview.c  view_overview.h  view_registry.c  view_registry.h  view_simple.c  view_simple.h  view_simple_devices.c  view_simple_devices.h  view_solar_charger.c  view_solar_charger.h
pcb/: RELE_EXCEDENTE_y_fix_D2.md  p4_joint.GBL  p4_joint.GBS  p4_joint.GKO  p4_joint.GTL  p4_joint.GTO  p4_joint.GTP  p4_joint.GTS  p4_joint.XLN  p4_joint.b#1  p4_joint.b#2  p4_joint.b#3  p4_joint.b#4  p4_joint.b#5  p4_joint.b#6  p4_joint.b#7  p4_joint.b#8  p4_joint.b#9  p4_joint.brd  p4_joint.s#1  p4_joint.s#2  p4_joint.s#3  p4_joint.s#4  p4_joint.s#5  p4_joint.s#6  p4_joint.s#7  p4_joint.s#8  p4_joint.s#9  p4_joint.sch  p4_joint_BOM.csv  p4_joint_CPL.csv  p4_joint_add.l##  p4_joint_add.lbr  p4_joint_add.scr  p4_joint_revB.md
scripts/: gen_conectores_alim_ne185.py  gen_fan_wiring_pdf.py  gen_jp1_pinout.py  gen_rs485_bus_pdf.py  gen_stripboard_pdf.py
tools/: install-claude.sh  setup-autocaravana.sh
(+62 files in other folders)
